--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300&display=swap");
 body {
   background-color: #eceff1;
   font-family: "Roboto", sans-serif;
 }
+
 .container {
   width: 80%;
   margin: auto;
@@ -75,6 +77,11 @@ body {
   margin: 0 10px;
   font-size: 25px;
 }
+.policemontant {
+  font-family: "Source Code Pro", monospace;
+  font-weight: 300;
+}
+
 .ladate {
   font-weight: 200;
 }
@@ -85,4 +92,17 @@ body {
 
 .nomcompte.odd {
   background-color: #3276d2; /* Couleur pour les éléments impairs */
+}
+.but {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 15px;
+}
+.button {
+  width: 100px;
+  height: 30px;
+  justify-content: flex-end;
+  background-color: #f6f7f8;
+  border: none;
+  border-radius: 5px;
 }
